[gd_scene load_steps=16 format=3 uid="uid://chkianxdawnj0"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_0v7hf"]
[ext_resource type="Theme" uid="uid://vi4vba5f6fdc" path="res://menus/pumpkin_style.tres" id="1_tlia2"]
[ext_resource type="PackedScene" uid="uid://cg2uer2c3ev7" path="res://menus/help_menu.tscn" id="2_erruw"]
[ext_resource type="Texture2D" uid="uid://5db6ysg5pooi" path="res://jam-banner.png" id="3_1q2qc"]
[ext_resource type="Texture2D" uid="uid://du72v8s2bnv56" path="res://art/ui/cover_no_bg.png" id="3_6g6rs"]
[ext_resource type="Texture2D" uid="uid://dca17xbntkqey" path="res://art/ui/wallpaper.png" id="3_h2bwg"]
[ext_resource type="AudioStream" uid="uid://ckyutwb4p66tx" path="res://sounds/kenney/Retro Beat.ogg" id="3_t81v0"]
[ext_resource type="Script" path="res://menus/bg_slide.gd" id="4_2v4ke"]
[ext_resource type="Texture2D" uid="uid://dhk73um8vc68u" path="res://art/ui/level_1_icon.png" id="8_2facm"]
[ext_resource type="Texture2D" uid="uid://bpiriha4rkg47" path="res://art/ui/level_2_icon.png" id="9_mstvw"]

[sub_resource type="Animation" id="Animation_vwh5i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.651]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("title:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("title:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.651]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:anchor_left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.294]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.259]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("VBoxContainer:anchor_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.707]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VBoxContainer:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.259]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("help_menu:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("help_menu:anchor_bottom")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.434]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("help_menu:anchor_right")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("help_menu:anchor_top")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.434]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("help_menu:anchor_left")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("help_menu:offset_top")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.231995]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("help_menu:offset_bottom")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.231934]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("help_menu:offset_right")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("help_menu:offset_left")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_g08cg"]
resource_name = "show_help"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:anchor_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.412, 1.651]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("title:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.651]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("title:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("title:offset_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0239868]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("title:offset_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("title:offset_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("title:offset_left")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("VBoxContainer:anchor_left")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.294, 0.294]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VBoxContainer:anchor_top")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.434, 2.259]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VBoxContainer:anchor_right")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.707, 0.707]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VBoxContainer:anchor_bottom")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.988, 2.259]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("VBoxContainer:offset_left")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.312012]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("VBoxContainer:offset_top")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-0.231995]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("VBoxContainer:offset_right")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-0.463989]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("VBoxContainer:offset_bottom")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-0.223999]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("help_menu:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("help_menu:offset_bottom")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.231934, 0.0]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("help_menu:offset_right")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.0, 0.0]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("help_menu:offset_top")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.231995, 0.0]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("help_menu:offset_left")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.0, 0.0]
}
tracks/21/type = "value"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("help_menu:anchor_bottom")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.434, 1.0]
}
tracks/22/type = "value"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("help_menu:anchor_right")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}
tracks/23/type = "value"
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/path = NodePath("help_menu:anchor_top")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.434, 0.0]
}
tracks/24/type = "value"
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/path = NodePath("help_menu:anchor_left")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_inwur"]
resource_name = "show_main"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:anchor_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.651, 0.412]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("title:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.651, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("title:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("title:offset_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0239868]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("title:offset_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("title:offset_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("title:offset_left")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("VBoxContainer:anchor_left")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.294, 0.294]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VBoxContainer:anchor_top")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.259, 0.434]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VBoxContainer:anchor_right")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.707, 0.707]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VBoxContainer:anchor_bottom")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.259, 0.988]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("VBoxContainer:offset_left")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.312012]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("VBoxContainer:offset_top")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-0.231995]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("VBoxContainer:offset_right")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-0.463989]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("VBoxContainer:offset_bottom")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-0.223999]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oqjhx"]
_data = {
"RESET": SubResource("Animation_vwh5i"),
"show_help": SubResource("Animation_g08cg"),
"show_main": SubResource("Animation_inwur")
}

[sub_resource type="LabelSettings" id="LabelSettings_c1fpu"]
font_size = 28

[node name="main_menu" type="Control" groups=["sfx"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tlia2")
script = ExtResource("1_0v7hf")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t81v0")
autoplay = true
bus = &"Music"

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "show_main"
libraries = {
"": SubResource("AnimationLibrary_oqjhx")
}

[node name="bg_slide" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -737.0
offset_top = -510.0
offset_right = 785.0
offset_bottom = 470.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_h2bwg")
expand_mode = 1
stretch_mode = 1
script = ExtResource("4_2v4ke")

[node name="title" type="TextureRect" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 1.651
anchor_right = 1.0
anchor_bottom = 1.651
offset_bottom = 0.0239868
grow_horizontal = 2
texture = ExtResource("3_6g6rs")
expand_mode = 1
stretch_mode = 5

[node name="title_text" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.412
offset_bottom = 0.0239868
grow_horizontal = 2
text = "Gourd Rush"
label_settings = SubResource("LabelSettings_c1fpu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294
anchor_top = 2.259
anchor_right = 0.707
anchor_bottom = 2.259
offset_left = 0.312012
offset_top = -0.231995
offset_right = -0.463989
offset_bottom = -0.223999
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="help" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Help"

[node name="website" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Game Website"

[node name="credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="help_menu" parent="." instance=ExtResource("2_erruw")]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.434
anchor_bottom = -1.434
offset_top = 0.231995
offset_bottom = 0.231934

[node name="credit" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.0823529, 0.188235, 1)

[node name="banner" type="TextureRect" parent="credit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.643
anchor_top = 0.776
anchor_right = 0.984
anchor_bottom = 0.958
offset_left = 0.263977
offset_top = 0.151978
offset_right = -0.567993
offset_bottom = 0.215942
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_1q2qc")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="credit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.306
anchor_top = 0.125
anchor_right = 0.694
anchor_bottom = 0.713
offset_left = -0.512024
offset_right = 0.511963
offset_bottom = -0.0240479
grow_horizontal = 2
grow_vertical = 2
text = "Made by LettucePie
I used to put my twitter handle here...
@LettucePie@mastodon.xyz

Made using Godot 4.0.3, Aseprite, blender, Krita

Menu and Play music by Kenney-nl

Thanks for checking out my submission to the Godot Wild Jam #62 - Harvest"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="close_credit" type="Button" parent="credit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.409
anchor_top = 0.75
anchor_right = 0.591
anchor_bottom = 0.866
offset_left = -0.167999
offset_top = -3.05176e-05
offset_right = 0.167969
offset_bottom = -0.16803
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[node name="level_select" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.22
anchor_top = 0.185
anchor_right = 0.78
anchor_bottom = 0.815
offset_left = 0.559982
offset_top = 0.119995
offset_right = -0.560059
offset_bottom = -0.120056
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="level_select"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.743
offset_bottom = -0.144012
grow_horizontal = 2
grow_vertical = 2

[node name="1_container" type="VBoxContainer" parent="level_select/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="name" type="Label" parent="level_select/HBoxContainer/1_container"]
layout_mode = 2
size_flags_vertical = 7
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="icon" type="TextureRect" parent="level_select/HBoxContainer/1_container"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("8_2facm")
expand_mode = 5
stretch_mode = 5

[node name="play_1" type="Button" parent="level_select/HBoxContainer/1_container"]
layout_mode = 2
size_flags_vertical = 7
text = "Play"

[node name="2_container" type="VBoxContainer" parent="level_select/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="name" type="Label" parent="level_select/HBoxContainer/2_container"]
layout_mode = 2
size_flags_vertical = 7
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="icon" type="TextureRect" parent="level_select/HBoxContainer/2_container"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("9_mstvw")
expand_mode = 5
stretch_mode = 5

[node name="play_2" type="Button" parent="level_select/HBoxContainer/2_container"]
layout_mode = 2
size_flags_vertical = 7
text = "Play"

[node name="close_level_select" type="Button" parent="level_select"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.767
anchor_right = 0.725
anchor_bottom = 1.0
offset_left = -0.100006
offset_top = 0.0639954
offset_right = 0.0999756
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="resized" from="bg_slide" to="bg_slide" method="_on_resized"]
[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="VBoxContainer/website" to="." method="_on_website_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="button_sfx" from="help_menu" to="." method="_on_help_menu_button_sfx"]
[connection signal="close_help" from="help_menu" to="." method="_on_help_menu_close_help"]
[connection signal="pressed" from="credit/close_credit" to="." method="_on_close_credit_pressed"]
[connection signal="pressed" from="level_select/HBoxContainer/1_container/play_1" to="." method="level_selected" binds= [0]]
[connection signal="pressed" from="level_select/HBoxContainer/2_container/play_2" to="." method="level_selected" binds= [1]]
[connection signal="pressed" from="level_select/close_level_select" to="." method="_on_close_level_select_pressed"]
